# labelcraft-ui

./: .gitignore  README.md  docker-compose.yml
api/: pyproject.toml
api/app/: annotations.py  auth.py  database.py  datasets.py  deps.py  main.py  models.py  projects.py  schemas.py  security.py
frontend/: index.html  package.json  tailwind.config.cjs  tsconfig.json
frontend/src/: App.vue  api.ts  router.ts
frontend/src/__tests__/: Home.spec.ts
frontend/src/components/: AppNav.vue  AppNotifications.vue
frontend/src/stores/: auth.ts  notifications.ts
frontend/src/views/: Dataset.vue  Home.vue  Login.vue  Project.vue  Projects.vue
tests/: test_admin_user.py  test_auth.py  test_projects.py
