[project]
name = "labelcraft-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "pydantic",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "Pillow",
    "python-multipart",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "httpx"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
